<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_ros2_whill_adapter</name>
  <version>0.0.0</version>
  <description>autoware ros2_whill adapter pakcage</description>
  <maintainer email="azumi.suzuki@tier4.jp">azumi-suzuki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>whill_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
